crates/gitat-core/src/snapshots/gitat_core__conflict__tests__snapshot_no_conflicts.snap
---
source: crates/gitat-core/src/conflict.rs
assertion_line: 148
expression: result
---
ConflictFile {
    path: "clean.rs",
    regions: [
        Clean(
            [
                "line1",
                "line2",
                "line3",
            ],
        ),
    ],
}
