crates/gitat-core/src/snapshots/gitat_core__conflict__tests__snapshot_single_conflict.snap
---
source: crates/gitat-core/src/conflict.rs
assertion_line: 164
expression: result
---
ConflictFile {
    path: "file.rs",
    regions: [
        Clean(
            [
                "line1",
            ],
        ),
        Conflict {
            ours: [
                "our change",
                "our change 2",
            ],
            theirs: [
                "their change",
            ],
        },
        Clean(
            [
                "line3",
            ],
        ),
    ],
}
